correct a bug with jump

--- a/styles/style.css
+++ b/styles/style.css
@@ -57,7 +57,6 @@ h3 {
 button {
     font-size: 2rem;
     width: 900px;
-    font-family: 'Nova Mono', monospace;
 }
 
 .logo {
